<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".Faq">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">


        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Eligible criteria for donating blood :"
            android:textSize="15dp"
            android:scrollbars="vertical"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv1"
            android:layout_alignTop="@+id/tv1"
            android:layout_marginTop="28dp"
            android:scrollbars="vertical"
            android:text="@string/faq"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv2"
            android:layout_alignTop="@+id/tv2"
            android:layout_marginTop="100dp"
            android:scrollbars="vertical"
            android:text="Exclusions (not eligible) :"
            android:textColor="@color/colorText"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="155dp"
            android:text="@string/faq2"
            android:scrollbars="vertical"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv4"
            android:layout_alignTop="@+id/tv4"
            android:layout_marginTop="210dp"
            android:text="Process of donation :"
            android:scrollbars="vertical"
            android:textColor="@color/colorText"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="395dp"
            android:scrollbars="vertical"
            android:text="@string/faq3"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv6"
            android:layout_alignTop="@+id/tv6"
            android:scrollbars="vertical"
            android:layout_marginTop="290dp"
            android:text="Why do pets need blood transfusion ?"
            android:textColor="@color/colorText"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:scrollbars="vertical"
            android:layout_marginTop="715dp"
            android:text="@string/faq4"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv8"
            android:layout_alignTop="@+id/tv8"
            android:layout_marginTop="145dp"
            android:scrollbars="vertical"
            android:text="How often can a pet give blood :"
            android:textColor="@color/colorText"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="890dp"
            android:scrollbars="vertical"
            android:text="@string/faq5"
            android:textColor="@android:color/black" />


        <TextView
            android:id="@+id/tv11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv10"
            android:layout_alignTop="@+id/tv10"
            android:layout_marginTop="180dp"
            android:scrollbars="vertical"
            android:text="Time to stop donating blood :"
            android:textColor="@color/colorText"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="1100dp"
            android:scrollbars="vertical"
            android:text="@string/faq6"
            android:textColor="@android:color/black" />


    </RelativeLayout>


</ScrollView>