<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hyderabad">

    <TextView
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="THE ANIMAL CARE CLINIC"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/t2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/contact4"
        android:autoLink="all"
        android:textSize="15dp"
        android:scrollbars="vertical"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/t3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="VET N PET HOSPITAL"
        android:layout_marginTop="150dp"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/t4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"
        android:text="@string/contact5"
        android:autoLink="all"
        android:textSize="15dp"
        android:scrollbars="vertical"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/t5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OLIVE'S PET CLINIC"
        android:layout_marginTop="280dp"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/t6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="310dp"
        android:text="@string/contact6"
        android:autoLink="all"
        android:textSize="15dp"
        android:scrollbars="vertical"
        android:textColor="@android:color/black" />

</RelativeLayout>