<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".Cremate">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imC"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/crem"/>

        <TextView
            android:id="@+id/tV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pets Cremation\n  Rs:1000/-"
            android:layout_below="@+id/imC"
            android:layout_alignTop="@+id/imC"
            android:layout_marginTop="150dp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:scrollbars="vertical"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/tV1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Private Cremation"
            android:layout_below="@+id/imC"
            android:layout_alignTop="@+id/imC"
            android:layout_marginTop="260dp"
            android:textSize="20sp"
            android:scrollbars="vertical"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/tV2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imC"
            android:layout_alignTop="@+id/imC"
            android:layout_marginTop="290dp"
            android:scrollbars="vertical"
            android:text="@string/cremate1"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tV3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imC"
            android:layout_alignTop="@+id/imC"
            android:layout_marginTop="380dp"
            android:scrollbars="vertical"
            android:text="Witnessed Cremation"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tV4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imC"
            android:layout_alignTop="@+id/imC"
            android:layout_alignParentTop="true"
            android:layout_marginTop="410dp"
            android:text="@string/cremate2"
            android:scrollbars="vertical"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tV5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imC"
            android:layout_alignTop="@+id/imC"
            android:layout_marginTop="520dp"
            android:text="Communal Cremation"
            android:scrollbars="vertical"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imC"
            android:layout_alignTop="@+id/imC"
            android:layout_alignParentTop="true"
            android:layout_marginTop="550dp"
            android:scrollbars="vertical"
            android:text="@string/cremate3"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/callButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="660dp"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:text="Contact us"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/callTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="650dp"
            android:scrollbars="vertical"
            android:gravity="center"
            android:text="9880549343"
            android:textColor="@android:color/black"
            android:visibility="invisible" />

    </RelativeLayout>

</ScrollView>